# limitless_sytematic

./: .gitignore  README.md
fwk/: .gitignore  docker-compose.yaml  pyproject.toml  requirements.txt
fwk/backtest/: __init__.py  backtest_basket_alloc_based.py  backtest_multiasset_vectordb.py  backtest_utils.py  backtest_visualisation.py  dual_momentum_backtest.py
fwk/bundler/: bundler.py  feature_bundler.py
fwk/config/: downloader.yaml
fwk/core/: __init__.py  classes.py  data_org.py  enums.py  scanner.py  search_data.py  storage.py
fwk/features/: base_dataframe.py  build_features_targets.py.orig  f_atr_breakout.py  f_bollinger_bands.py  f_candles_pattern.py  f_cto_line.py  f_daily_signal.py  f_donchian.py  f_gap_pct.py  f_lag.py  f_opening_range.py  f_order_flow.py  f_pivot_points.py  f_premarket.py  f_sentiment.py  f_td_sequential.py  f_total_signal.py  f_trend.py  f_trend_indicator.py  f_triangle_pattern.py  f_volume_ratio.py  f_vwap.py  feature_build_features_targets.py  feature_market_timer.py  feature_ta_utils.py  features_builder.py  features_time_utils.py  features_utils.py  signals_utils.py  targets_generators.py  targets_trail_stop.py  targets_trend.py  targets_trend_optimise.py  targets_yaml_builder.py
fwk/fitting/: fitting_core.py  fitting_feature_bundler.py  fitting_feature_selection.py  fitting_hyperparams.py  fitting_judge.py  fitting_metrics.py  fitting_models.py  fitting_visualiser.py  fitting_visualiser3.py
fwk/ideas/: groq_strat.py  spy_qqq_strategies.py
fwk/lab/: Dockerfile
fwk/listener/: .dockerignore  api.sh  check_routes.py  docker-compose-downloader.yaml  docker-compose-main-app.yaml  docker-compose-redis.yaml  docker-compose-screener.yaml  docker-compose.yml  docker.sh  dockerfile_api  dockerfile_downloader  dockerfile_list  dockerfile_screener  down_down.sh  downloader.sh  redis.sh  requirements.txt  screener.sh  simple_test.py  start_screener.sh  test_config_display.html  test_data_types.py  test_display_logic.py  test_integration.py  up_down.sh
fwk/merger/: merger_utils.py
fwk/norm/: norm_firstdata.py  norm_firstrate_etf_div_adj.py  norm_firstrate_fx.py  norm_generic.py  norm_utils.py
fwk/notebooks/: ETF_selection.ipynb  Untitled.ipynb  backtest_dual_momentum.ipynb  backtest_dual_momentum_findout.ipynb  backtest_walkforward_roc.ipynb  bkt_dual_mom_clean.ipynb  bundle_pure.ipynb  calib_xgb_cto_rsi.ipynb  cto.ipynb  cto_etf_optimize.ipynb  feature_predictivity_test.ipynb  (+10 more)
(+256 files in other folders)
